# Fetch-Receipt-Processor

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
