[package]
name = "receipt-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
help = "0.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.11.1", features = ["v4", "fast-rng", "serde"] }
warp = "0.3.7"
